--- a/app/src/main/res/layout/activity_grafica.xml
+++ b/app/src/main/res/layout/activity_grafica.xml
@@ -15,7 +15,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/etInstrucciones"
+        app:layout_constraintBottom_toTopOf="@+id/tvInstrucciones"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,6 +26,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="28dp"
+        android:onClick="graficarExpresion"
+
         android:text="@string/btnGraficar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,8 +47,8 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <EditText
-        android:id="@+id/etInstrucciones"
+    <TextView
+        android:id="@+id/tvInstrucciones"
         android:layout_width="312dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -56,7 +58,6 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="10dp"
         android:ems="10"
-        android:inputType="textPersonName"
         android:text="@string/etInstGraficar"
         app:layout_constraintBottom_toTopOf="@+id/btnGraficar"
         app:layout_constraintEnd_toEndOf="parent"
